finish add page review adn update status reivew of admin role

--- a/app/views/shares/_header_nav.html.erb
+++ b/app/views/shares/_header_nav.html.erb
@@ -23,9 +23,18 @@
                 <li class="my-nav-item">
                   <%= link_to "Tours", tours_path %>
                 </li>
-                <li class="my-nav-item"><%= link_to t("booking_tours"), booking_tours_path if current_user %></li>
-                <li class="my-nav-item"><%= link_to t("reviews"), reviews_path(:tab => 'reviews'), class: "smooth-menu" %></li>
-                <li class="my-nav-item"><%= link_to 'New Review', reviews_from_url_path, class: "smooth-menu" %></li>
+                <li class="my-nav-item">
+                  <%= link_to t("booking_tours"), booking_tours_path if current_user && !current_user.admin? %></li>
+                  <%= link_to t("booking_tours"), booking_tours_path if current_user&.admin? %></li>
+
+                <% if @current_user&.admin? %>
+                  <li class="my-nav-item">
+                    <%= link_to t("reviews"), admin_reviews_path(:tab => 'reviews'), class: "smooth-menu" %></li>
+                <% else %>
+                  <li class="my-nav-item">
+                    <%= link_to t("reviews"), reviews_path(:tab => 'reviews'), class: "smooth-menu" %></li>
+                  <li class="my-nav-item"><%= link_to 'New Review', reviews_from_url_path, class: "smooth-menu" %></li>
+                <% end %>
                 <% if logged_in? %>
                   <li>
                     <a href="#">
