--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -9,3 +9,66 @@
 
 </section><!--/.about-us-->
 
+<aside>
+ 
+
+<div class="container">
+  <br>
+  <div class="card border-0">
+    <div class="row">
+    	<aside class="col-sm-12">
+        <div class="row">
+      		<div id="form-new-review">
+      		<div class="col-12 col-md-12">
+  			<div class="bg-info card border-primary rounded-0" style="p">
+   				 <h3 class="title text-uppercase">
+     			 Edit your review
+   				 </h3>
+    			<!--Form with header-->
+   			 <%= form_for @review, url:review_path(id: @review.id), method: :patch do |f| %>
+     		 <%= f.number_field :point %>
+      		 <%= f.text_area :content, rows: 5, data: {provide: "markdown"}, class: "ckeditor", id: "edit_review" %>
+
+      		<%= f.submit "Save", class: "btn btn-success" %>
+    	<% end %>
+    <!--Form with header-->
+ 	      </div>
+	      </div>
+          </div>
+          </div>
+    	</aside>
+    </div>
+  </div>
+</div>
+
+
+<aside>
+
+<script type="text/javascript">
+	CKEDITOR.timestamp='ABCD';
+
+	if ($('textarea').length > 0){
+	  var data = $('.ckeditor');
+	   $.each(data,function(i){
+	    CKEDITOR.replace(data[i].id)
+	   });
+    }
+	CKEDITOR.config.height= 300;
+
+	CKEDITOR.config.toolbar = [
+		{ name: 'document', items: [ 'Source', '-', 'Save', 'NewPage', 'ExportPdf', 'Preview', 'Print', '-', 'Templates' ] },
+		{ name: 'clipboard', items: [ 'Cut', 'Copy', 'Paste', 'PasteText', 'PasteFromWord', '-', 'Undo', 'Redo' ] },
+		{ name: 'editing', items: [ 'Find', 'Replace', '-', 'SelectAll', '-', 'Scayt' ] },
+		{ name: 'forms', items: [ 'Form', 'Checkbox', 'Radio', 'TextField', 'Textarea', 'Select', 'Button', 'ImageButton', 'HiddenField' ] },
+		'/',
+		{ name: 'basicstyles', items: [ 'Bold', 'Italic', 'Underline', 'Strike', 'Subscript', 'Superscript', '-', 'CopyFormatting', 'RemoveFormat' ] },
+		{ name: 'paragraph', items: [ 'NumberedList', 'BulletedList', '-', 'Outdent', 'Indent', '-', 'Blockquote', 'CreateDiv', '-', 'JustifyLeft', 'JustifyCenter', 'JustifyRight', 'JustifyBlock', '-', 'BidiLtr', 'BidiRtl', 'Language' ] },
+		{ name: 'links', items: [ 'Link', 'Unlink', 'Anchor' ] },
+		{ name: 'insert', items: [ 'Image', 'Flash', 'Table', 'HorizontalRule', 'Smiley', 'SpecialChar', 'PageBreak', 'Iframe' ] },
+		'/',
+		{ name: 'styles', items: [ 'Styles', 'Format', 'Font', 'FontSize' ] },
+		{ name: 'colors', items: [ 'TextColor', 'BGColor' ] },
+		{ name: 'tools', items: [ 'Maximize', 'ShowBlocks' ] },
+		{ name: 'about', items: [ 'About' ] }
+	];
+</script>
