--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -23,3 +23,14 @@
     </div>
   </div>
 </div>
+
+<script type="text/javascript">
+  if ($('textarea').length > 0){
+    var data = $('.ckeditor');
+     $.each(data,function(i){
+      CKEDITOR.replace(data[i].id)
+     });
+    }
+
+  CKEDITOR.config.height= 300;
+</script>
