--- a/app/views/reviews/_search.html.erb
+++ b/app/views/reviews/_search.html.erb
@@ -1,31 +1,6 @@
 <div class="row bg-info card border-primary">
-  <div class="col-lg-3 col-md-3 col-sm-4">
-    <div class="single-tab-select-box">
-      <h2>Tours</h2>
-      <div class="travel-select-icon">
-        <select class="form-control">
-
-          <option value="default">5</option><!-- /.option-->
-
-          <option value="10">10</option><!-- /.option-->
-
-          <option value="15">15</option><!-- /.option-->
-          <option value="20">20</option><!-- /.option-->
-
-        </select><!-- /.select-->
-      </div><!-- /.travel-select-icon -->
-    </div><!--/.single-tab-select-box-->
-  </div>
-  <div class="col-lg-3 col-md-3 col-sm-4">
-    <div class="single-tab-select-box">
-      <h2>Text</h2>
-      <div class="">
-        <input class="form-control" style="height: 40px;">
-      </div><!-- /.travel-select-icon -->
-    </div><!--/.single-tab-select-box-->
-  </div><!--/.col-->
-
- <div class="col-lg-3 col-md-3 col-sm-4">
+   
+   <div class="col-lg-3 col-md-3 col-sm-4">
     <div class="single-tab-select-box">
       <h2>Tour name</h2>
       <div class="travel-select-icon">
@@ -37,10 +12,30 @@
       </div><!-- /.travel-select-icon -->
     </div><!--/.single-tab-select-box-->
   </div>
+
+  <div class="col-lg-3 col-md-3 col-sm-4">
+    <div class="single-tab-select-box">
+      <h2>Text</h2>
+      <div class="">
+        <input class="form-control" style="height: 40px;">
+      </div><!-- /.travel-select-icon -->
+    </div><!--/.single-tab-select-box-->
+  </div><!--/.col-->
+
+
+  <div class="col-lg-3 col-md-3 col-sm-4">
+    <div class="single-tab-select-box">
+      <h2>Created at</h2>
+      <div class="travel-check-icon">
+        <input type="text" name="return" class="form-control" data-toggle="datepicker" placeholder="22 -01 - 2017 ">
+      </div><!-- /.travel-select-icon -->
+    </div><!--/.single-tab-select-box-->
+  </div><!--/.col-->
+
   <div class="col-lg-3 col-md-3 col-sm-4">
     <div class="about-btn">
       <button  class="about-view travel-btn">
-        search
+        Search
       </button><!--/.travel-btn-->
     </div><!--/.about-btn-->
   </div>
