--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -27,7 +27,7 @@
     			<!--Form with header-->
    			 <%= form_for @review, url:review_path(id: @review.id), method: :patch do |f| %>
      		 <%= f.number_field :point %>
-      		 <%= f.text_area :content, rows: 5, data: {provide: "markdown"}, class: "ckeditor", id: "edit_review" %>
+      		 <%= f.text_area :content, class: "ckeditor", id: "edit_review" %>
 
       		<%= f.submit "Save", class: "btn btn-success" %>
     	<% end %>
