--- a/app/views/static_pages/_travel_box.html.erb
+++ b/app/views/static_pages/_travel_box.html.erb
@@ -7,61 +7,37 @@
         <div class="single-travel-boxes">
           <div id="desc-tabs" class="desc-tabs">
 
-        <ul class="nav nav-tabs" role="tablist">
-
-          <li role="presentation" class="active">
-            <a href="#tours" aria-controls="tours" role="tab" data-toggle="tab">
-              <i class="fa fa-tree"></i>
-              tours
-            </a>
-          </li>
-
-          <li role="presentation">
-            <a href="#hotels" aria-controls="hotels" role="tab" data-toggle="tab">
-              <i class="fa fa-building"></i>
-              hotels
-            </a>
-          </li>
-
-          <li role="presentation">
-            <a href="#flights" aria-controls="flights" role="tab" data-toggle="tab">
-              <i class="fa fa-plane"></i>
-              flights
-            </a>
-          </li>
-        </ul>
-
         <!-- Tab panes -->
         <div class="tab-content">
           <div role="tabpanel" class="tab-pane active fade in" id="tours">
             <%= form_with url: tours_path, method: :get, local: true do |f| %>
             <div class="tab-para">
               <div class="row">
-                <div class="col-lg-6 col-md-4 col-sm-4">
+                <div class="col-lg-4 col-md-4 col-sm-4">
                   <div class="single-tab-select-box">
-                    <h2>Name</h2>
+                    <h2>Tour Name</h2>
                     <div class="travel-icon">
-                      <%= f.text_field :name, value:(params[:name] || ""), autofocus: true, class: "form-control", style: "height: 50px;" %>
+                      <%= f.text_field :name, value:(params[:name] || ""), autofocus: true, class: "form-control", style: "height: 40px;" %>
                     </div><!-- /.travel-select-icon -->
                   </div><!--/.single-tab-select-box-->
                 </div>
 
-                <div class="col-lg-2 col-md-1 col-sm-4">
+                <div class="col-lg-4 col-md-1 col-sm-4">
                   <div class="single-tab-select-box">
-                    <h2>duration</h2>
+                    <h2>Duration</h2>
                     <div class="travel-icon">
                       <%= f.number_field :duaration, class: "form-control", step: 1,
-                      min: 1, value: params[:duaration] || "", style: "height: 50px;" %>
+                      min: 1, value: params[:duaration] || "", style: "height: 40px;" %>
                     </div><!-- /.travel-select-icon -->
                   </div><!--/.single-tab-select-box-->
                 </div><!--/.col-->
 
-                <div class="col-lg-4 col-md-1 col-sm-4">
+                <div class="col-lg-2 col-md-1 col-sm-4">
                   <div class="single-tab-select-box">
                     <h2></h2>
                     <div class="about-btn">
-                      <%= f.button class: "about-view travel-btn", style: "height: 50px !important;" do %>
-                        <i class="fa fa-search" aria-hidden="true"  style="padding-right: 11px; font-size: 27px;"></i>
+                      <%= f.button class: "about-view travel-btn", style: "line-height: 40px;" do %>
+                        <i class="fa fa-search" aria-hidden="true"  style=" padding-right: 11px; font-size: 20px;"></i>
                         search
                       <% end %><!-- /.select-->
                     </div><!-- /.travel-select-icon -->
@@ -70,275 +46,6 @@
               </div><!--/.row-->
             </div><!--/.tab-para-->
             <% end %>
-          </div><!--/.tabpannel-->
-
-          <div role="tabpanel" class="tab-pane fade in" id="hotels">
-            <div class="tab-para">
-
-              <div class="row">
-                <div class="col-lg-4 col-md-4 col-sm-12">
-                  <div class="single-tab-select-box">
-
-                    <h2>destination</h2>
-
-                    <div class="travel-select-icon">
-                      <select class="form-control ">
-
-                          <option value="default">enter your destination country</option><!-- /.option-->
-
-                          <option value="turkey">turkey</option><!-- /.option-->
-
-                          <option value="russia">russia</option><!-- /.option-->
-                          <option value="egept">egypt</option><!-- /.option-->
-
-                      </select><!-- /.select-->
-                    </div><!-- /.travel-select-icon -->
-
-                    <div class="travel-select-icon">
-                      <select class="form-control ">
-
-                          <option value="default">enter your destination location</option><!-- /.option-->
-
-                          <option value="istambul">istambul</option><!-- /.option-->
-
-                          <option value="mosko">mosko</option><!-- /.option-->
-                          <option value="cairo">cairo</option><!-- /.option-->
-
-                      </select><!-- /.select-->
-                    </div><!-- /.travel-select-icon -->
-
-                  </div><!--/.single-tab-select-box-->
-                </div><!--/.col-->
-
-                <div class="col-lg-2 col-md-3 col-sm-4">
-                  <div class="single-tab-select-box">
-                    <h2>check in</h2>
-                    <div class="travel-check-icon">
-                      <form action="#">
-                        <input type="text" name="check_in" class="form-control" data-toggle="datepicker" placeholder="12 -01 - 2017 ">
-                      </form>
-                    </div><!-- /.travel-check-icon -->
-                  </div><!--/.single-tab-select-box-->
-                </div><!--/.col-->
-
-                <div class="col-lg-2 col-md-3 col-sm-4">
-                  <div class="single-tab-select-box">
-                    <h2>check out</h2>
-                    <div class="travel-check-icon">
-                      <form action="#">
-                        <input type="text" name="check_out" class="form-control"  data-toggle="datepicker" placeholder="22 -01 - 2017 ">
-                      </form>
-                    </div><!-- /.travel-check-icon -->
-                  </div><!--/.single-tab-select-box-->
-                </div><!--/.col-->
-
-                <div class="col-lg-2 col-md-1 col-sm-4">
-                  <div class="single-tab-select-box">
-                    <h2>duration</h2>
-                    <div class="travel-select-icon">
-                      <select class="form-control ">
-
-                          <option value="default">5</option><!-- /.option-->
-
-                          <option value="10">10</option><!-- /.option-->
-
-                          <option value="15">15</option><!-- /.option-->
-                          <option value="20">20</option><!-- /.option-->
-
-                      </select><!-- /.select-->
-                    </div><!-- /.travel-select-icon -->
-                  </div><!--/.single-tab-select-box-->
-                </div><!--/.col-->
-
-                <div class="col-lg-2 col-md-1 col-sm-4">
-                  <div class="single-tab-select-box">
-                    <h2>members</h2>
-                    <div class="travel-select-icon">
-                      <select class="form-control ">
-
-                          <option value="default">1</option><!-- /.option-->
-
-                          <option value="2">2</option><!-- /.option-->
-
-                          <option value="4">4</option><!-- /.option-->
-                          <option value="8">8</option><!-- /.option-->
-
-                      </select><!-- /.select-->
-                    </div><!-- /.travel-select-icon -->
-                  </div><!--/.single-tab-select-box-->
-                </div><!--/.col-->
-
-              </div><!--/.row-->
-
-              <div class="row">
-                <div class="col-sm-5"></div><!--/.col-->
-                <div class="clo-sm-7">
-                  <div class="about-btn travel-mrt-0 pull-right">
-                    <button  class="about-view travel-btn">
-                      search
-                    </button><!--/.travel-btn-->
-                  </div><!--/.about-btn-->
-                </div><!--/.col-->
-
-              </div><!--/.row-->
-
-            </div><!--/.tab-para-->
-
-          </div><!--/.tabpannel-->
-
-          <div role="tabpanel" class="tab-pane fade in" id="flights">
-            <div class="tab-para">
-              <div class="trip-circle">
-                <div class="single-trip-circle">
-                  <input type="radio" id="radio01" name="radio" />
-                    <label for="radio01">
-                      <span class="round-boarder">
-                        <span class="round-boarder1"></span>
-                      </span>round trip
-                    </label>
-                </div><!--/.single-trip-circle-->
-                <div class="single-trip-circle">
-                  <input type="radio" id="radio02" name="radio" />
-                    <label for="radio02">
-                      <span class="round-boarder">
-                        <span class="round-boarder1"></span>
-                      </span>on way
-                    </label>
-                </div><!--/.single-trip-circle-->
-              </div><!--/.trip-circle-->
-              <div class="row">
-                <div class="col-lg-4 col-md-4 col-sm-12">
-                  <div class="single-tab-select-box">
-
-                    <h2>from</h2>
-
-                    <div class="travel-select-icon">
-                      <select class="form-control ">
-
-                          <option value="default">enter your location</option><!-- /.option-->
-
-                          <option value="turkey">turkey</option><!-- /.option-->
-
-                          <option value="russia">russia</option><!-- /.option-->
-                          <option value="egept">egypt</option><!-- /.option-->
-
-                      </select><!-- /.select-->
-                    </div><!-- /.travel-select-icon -->
-                  </div><!--/.single-tab-select-box-->
-                </div><!--/.col-->
-
-                <div class="col-lg-2 col-md-3 col-sm-4">
-                  <div class="single-tab-select-box">
-                    <h2>departure</h2>
-                    <div class="travel-check-icon">
-                      <form action="#">
-                        <input type="text" name="departure" class="form-control" data-toggle="datepicker"
-                        placeholder="12 -01 - 2017 ">
-                      </form>
-                    </div><!-- /.travel-check-icon -->
-                  </div><!--/.single-tab-select-box-->
-                </div><!--/.col-->
-
-                <div class="col-lg-2 col-md-3 col-sm-4">
-                  <div class="single-tab-select-box">
-                    <h2>return</h2>
-                    <div class="travel-check-icon">
-                      <form action="#">
-                        <input type="text" name="return" class="form-control" data-toggle="datepicker" placeholder="22 -01 - 2017 ">
-                      </form>
-                    </div><!-- /.travel-check-icon -->
-                  </div><!--/.single-tab-select-box-->
-                </div><!--/.col-->
-
-                <div class="col-lg-2 col-md-1 col-sm-4">
-                  <div class="single-tab-select-box">
-                    <h2>adults</h2>
-                    <div class="travel-select-icon">
-                      <select class="form-control ">
-
-                          <option value="default">5</option><!-- /.option-->
-
-                          <option value="10">10</option><!-- /.option-->
-
-                          <option value="15">15</option><!-- /.option-->
-                          <option value="20">20</option><!-- /.option-->
-
-                      </select><!-- /.select-->
-                    </div><!-- /.travel-select-icon -->
-                  </div><!--/.single-tab-select-box-->
-                </div><!--/.col-->
-
-                <div class="col-lg-2 col-md-1 col-sm-4">
-                  <div class="single-tab-select-box">
-                    <h2>childs</h2>
-                    <div class="travel-select-icon">
-                      <select class="form-control ">
-
-                          <option value="default">1</option><!-- /.option-->
-
-                          <option value="2">2</option><!-- /.option-->
-
-                          <option value="4">4</option><!-- /.option-->
-                          <option value="8">8</option><!-- /.option-->
-
-                      </select><!-- /.select-->
-                    </div><!-- /.travel-select-icon -->
-                  </div><!--/.single-tab-select-box-->
-                </div><!--/.col-->
-
-              </div><!--/.row-->
-
-              <div class="row">
-                <div class="col-lg-4 col-md-4 col-sm-12">
-                  <div class="single-tab-select-box">
-
-                    <h2>to</h2>
-
-                    <div class="travel-select-icon">
-                      <select class="form-control ">
-
-                          <option value="default">enter your destination location</option><!-- /.option-->
-
-                          <option value="istambul">istambul</option><!-- /.option-->
-
-                          <option value="mosko">mosko</option><!-- /.option-->
-                          <option value="cairo">cairo</option><!-- /.option-->
-
-                      </select><!-- /.select-->
-                    </div><!-- /.travel-select-icon -->
-
-                  </div><!--/.single-tab-select-box-->
-                </div><!--/.col-->
-                <div class="col-lg-3 col-md-3 col-sm-4">
-                  <div class="single-tab-select-box">
-
-                    <h2>class</h2>
-                    <div class="travel-select-icon">
-                      <select class="form-control ">
-
-                          <option value="default">enter class</option><!-- /.option-->
-
-                          <option value="A">A</option><!-- /.option-->
-
-                          <option value="B">B</option><!-- /.option-->
-                          <option value="C">C</option><!-- /.option-->
-
-                      </select><!-- /.select-->
-                    </div><!-- /.travel-select-icon -->
-                  </div><!--/.single-tab-select-box-->
-                </div><!--/.col-->
-                <div class="clo-sm-5">
-                  <div class="about-btn pull-right">
-                    <button  class="about-view travel-btn">
-                      search
-                    </button><!--/.travel-btn-->
-                  </div><!--/.about-btn-->
-                </div><!--/.col-->
-
-              </div><!--/.row-->
-
-            </div>
-
           </div><!--/.tabpannel-->
 
         </div><!--/.tab content-->
