--- a/app/views/reviews/_my_review.html.erb
+++ b/app/views/reviews/_my_review.html.erb
@@ -1,7 +1,7 @@
 <tr>
   <td><%= index + 1 %></td>
   <td><%= link_to review.tour.name, tour_path(id: review.tour.id) %></td>
-  <td><%= review.content[0..50] << (review.content.length > 50 ? " ..." : "") %></td>
+  <td><%= raw(review.content[0..50] << (review.content.length > 50 ? " ..." : "")) %></td>
   <td><%= review.point %></td>
   <td><%= review.status %></td>
   <td><%= l review.created_at %></td>
